# jun11

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ENV_VARS.md  MANUAL_STEPS.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
.claude/rules/: architecture.md
.github/workflows/: ci.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_create_users.py  0001_create_organization_tables.py  0002_backfill_personal_orgs.py  0003_add_is_app_admin.py  0004_5_create_core_tables.py  0004_create_audit_log.py  0005_add_org_id_to_conversations_and_rag.py  0006_backfill_org_id_on_conversations.py  0007_create_knowledge_bases.py  0008_backfill_default_kbs.py  0009_conv_active_kb_ids.py  0010_org_billing_seats.py  0011_create_plan_price_tables.py  0012_create_subscription_table.py  0013_create_stripe_event_table.py  0014_credits_usage_events.py  0015_create_mv_usage_daily.py  0016_user_onboarding_at.py  0018_user_slash_commands.py
backend/app/: admin.py  main.py
backend/app/agents/: assistant.py  prompts.py
backend/app/agents/tools/: ask_user_tool.py  datetime_tool.py
backend/app/api/: deps.py  exception_handlers.py
backend/app/api/routes/v1/: __init__.py  admin_conversations.py  admin_ratings.py  admin_stats.py  admin_users.py  agent.py  auth.py  billing.py  contact.py  conversations.py  files.py  health.py  invitations.py  me_slash_commands.py  members.py  oauth.py  organizations.py  sessions.py  users.py  webhooks.py
backend/app/clients/: __init__.py  redis.py
backend/app/commands/: cleanup.py  create_app_admin.py  seed.py  sync_stripe_plans.py
backend/app/core/: audit.py  cache.py  config.py  exceptions.py  logfire_setup.py  middleware.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  audit_log.py  chat_file.py  conversation.py  conversation_share.py  credit_transaction.py  message_rating.py  organization.py  plan.py  session.py  stripe_event.py  subscription.py  user.py  user_slash_command.py  webhook.py
backend/app/repositories/: __init__.py  chat_file.py  conversation.py  conversation_share.py  credit_transaction.py  invitation.py  member.py  message_rating.py  organization.py  plan.py  session.py  stripe_event.py  subscription.py  usage_event.py  user.py  user_slash_command.py  webhook.py
backend/app/schemas/: __init__.py  admin.py  billing.py  contact.py  conversation.py  conversation_share.py  file.py  message_rating.py  organization.py  password_reset.py  user.py  user_slash_command.py  webhook.py
backend/app/services/: admin.py  agent.py  agent_session.py  contact.py  conversation.py  conversation_share.py  file_storage.py  file_upload.py  invitation.py  member.py  message_rating.py  organization.py  session.py  usage.py  user.py  user_slash_command.py  webhook.py
backend/app/services/billing/: __init__.py  checkout_service.py  credit_service.py  exceptions.py  facade.py  pricing.py  stripe_client.py  subscription_service.py  webhook_handler.py
backend/app/services/billing/handlers/: customer_events.py  invoice_events.py  payment_events.py  subscription_events.py
backend/app/services/email/: __init__.py  exceptions.py  service.py  templates.py
backend/app/services/email/providers/: base.py  log.py  resend.py  smtp.py
backend/app/services/rate_limit/: rules.py  service.py  storage.py
backend/app/worker/: taskiq_app.py
backend/app/worker/background/: __init__.py
backend/app/worker/tasks/: __init__.py  cleanup_tasks.py  email_tasks.py  schedules.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_admin.py  test_agents.py  test_clients.py  test_conversation_kb_toggle.py  test_core.py  test_kb_scoping.py  test_migrations.py  test_rbac_teams.py  test_repositories.py  test_repositories_teams.py  test_services.py  test_services_conversation.py  test_services_members.py  test_services_organizations.py  test_stripe_seats.py  test_tenant_isolation.py  test_worker_taskiq.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_metrics.py  test_users.py
docs/: adding_features.md  architecture.md  commands.md  configuration.md  deploy.md  file-processing.md  patterns.md  permissions.md
docs/howto/: add-api-endpoint.md  add-background-task.md  customize-agent-prompt.md
emails/compiled/: email_verification.html  email_verification.txt  invitation.html  invitation.txt  low_credits.html  low_credits.txt  magic_link.html  magic_link.txt  newsletter_welcome.html  newsletter_welcome.txt  password_reset.html  password_reset.txt  payment_failed.html  payment_failed.txt  payment_succeeded.html  payment_succeeded.txt  subscription_canceled.html  subscription_canceled.txt  subscription_changed.html  subscription_changed.txt  trial_ending.html  trial_ending.txt  trial_expired.html  trial_expired.txt  welcome.html  welcome.txt
frontend/: .env.example  Dockerfile  README.md  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: auth.setup.ts  auth.spec.ts  chat.spec.ts  home.spec.ts
frontend/messages/: en.json  pl.json
frontend/src/: i18n.ts  middleware.ts
frontend/src/app/: apple-icon.tsx  (+10 more)
i-docs/: master-execution-guide.v1.md  solopreneur-checklist-rules.v1.md  spec-chain.v1.md  spec-prompts.v1.md
i-docs/downgraded/: gov-enforcement.v1.md  key-success-metrics.v1.md  operating-model.v1.md  project-roadmap.v1.md  tech-architecture.v1.md
i-docs/exploration/: doc-collision-audit.v1.md  doc-init-master-prompt.md
i-docs/plan/: INIVESTEC-brief-200-words.md  INIVESTEC-brief-500-words.md  agentic-dev-improver.md  moduler-code.md  project-rules-minified.v1.md  project-rules.v1.md
nginx/: nginx.conf
(+324 files in other folders)
