[project]
name = "proj2"
version = "0.1.0"
description = "My FastAPI project"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" },
]

dependencies = [
    # TODO: unpin once FastAPI fixes empty-path routes (regression in 0.137).
    "fastapi>=0.135.3,<0.137",
    "uvicorn[standard]>=0.43.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.20",
    "logfire[fastapi,asyncpg,redis,httpx]>=4.30.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.18.0",
    "greenlet>=3.2.0",
    # HMAC HS256 only — no asymmetric keys, no `cryptography` extra.
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "authlib>=1.3.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "fastapi-cache2>=0.2.2",
    # fastapi_cache imports starlette.templating which requires Jinja2 even
    # when no templates are rendered.
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    "resend>=2.0.0",
    "fastapi-pagination>=0.12.31",
    "sentry-sdk[fastapi]>=2.53.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sqladmin>=0.24.0",
    "itsdangerous>=2.2.0",
    "taskiq[reload]>=0.11.0",
    "taskiq-redis>=1.0.0",
    "taskiq-dependencies>=0.1.0",
    "boto3>=1.42.0",
    "pydantic-ai-slim[google,duckduckgo,web-fetch]>=1.80.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "stripe>=11.0.0",
]

# PEP 735 dependency group — installed by `uv sync` / `uv sync --dev` and
# excluded by `--no-dev`. (A `dev` extra under [project.optional-dependencies]
# only installed via uv's deprecated dev-extra special-casing, so `uv sync --dev`
# could skip it on some uv versions and leave pre-commit/ruff/ty unspawnable.)
[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "anyio[trio]>=4.9.0",
    "pytest-cov>=6.1.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "ty>=0.0.29",
    "pre-commit>=4.0.0",
]

[project.scripts]
proj2 = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E402", # module level import not at top (needed for conditional Jinja2 imports)
    "B008", # function call in default argument (needed for FastAPI Depends)
    "B905", # zip() without strict= (Python 3.10+ style, not needed)
    "RUF012", # mutable class attribute without ClassVar (used in parser base class)
    "RUF059", # unpacked variable never used (CLI destructuring pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [
    "alembic/",
    "tests/",
    "cli/",
    "app/commands/",
]

[tool.ty.rules]
# FastAPI Depends() injects at runtime — default=None on typed params is intentional
invalid-parameter-default = "warn"
# Starlette/FastAPI handler signatures use Union types that ty flags
invalid-argument-type = "warn"
# ORM models with Optional fields trigger on attribute assignment
invalid-assignment = "warn"
# Callable[..., Any] doesn't expose __name__ but function objects do
unresolved-attribute = "warn"
# datetime.utcnow deprecation warnings
deprecated = "warn"
# Optional deps imported inside try/except (pymupdf, docx, faker) and
# feature-gated models referenced best-effort by the admin dashboard. These are
# expected to be absent in some configs, so don't surface them at all.
unresolved-import = "ignore"
# dict() overload matching on dynamic types from validators
no-matching-overload = "warn"
# Template uses mypy-style `# type: ignore` comments which ty doesn't recognize
unused-type-ignore-comment = "warn"
# A `# ty: ignore` needed in one database/feature config can be unused in
# another generated from the same template — don't fail on that.
unused-ignore-comment = "ignore"
# Operations on Unknown types from untyped libraries (pymupdf, etc.)
unsupported-operator = "warn"
# Third-party libs (langchain, redis-py) ship without complete type stubs;
# kwargs that work at runtime are flagged as unknown.
unknown-argument = "warn"
# redis-py / asyncio overloads return Awaitable[T] | T which ty rejects as awaitable
invalid-await = "warn"
# sessionmaker(class_=AsyncSession) returns sync sessionmaker per overloads
# but the resulting callable still produces an async context manager.
invalid-context-manager = "warn"
# Helpers like get_agent accept **kwargs but their stubs only list specific params
missing-argument = "warn"
# LangChain BaseMessage subclasses (AIMessage etc.) carry tool_calls only on
# specific subclasses; ty cannot narrow via hasattr().
not-iterable = "warn"
# Return-type widening for langgraph .compile() (StateGraph vs CompiledStateGraph)
invalid-return-type = "warn"
# CrewAI/langgraph runtime classes use kwargs that ty stubs don't enumerate
invalid-type-form = "warn"

# The framework agent wrappers (langchain/langgraph/deepagents/pydantic-deep)
# are thin adapters over heavily-untyped third-party libraries — LangGraph's
# Pregel.ainvoke/astream, create_agent/create_deep_agent overloads, RunnableConfig
# TypedDicts, Agent[...] generic variance. ty can't reconcile their stubs, but the
# calls are correct at runtime; silence those rule families in the adapters only
# (name-resolution rules stay on, so real typos are still caught).
[[tool.ty.overrides]]
include = ["app/agents/*_assistant.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
unknown-argument = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/logfire_setup.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.fastapi-fullstack]
generator_version = "0.2.12"
generated_at = "2026-06-18T10:38:46.315203+00:00"
